# SL-PSL-RTP

./: .gitignore  API_USAGE.md  ASSETS_SETUP_GUIDE.md  COLAB_FIXED_SETUP.md  COLAB_SETUP.md  README.md  SIGN_TO_TEXT_INTEGRATION.md  STREAMLIT_DEPLOYMENT_GUIDE.md  app.py  app_backup.py  app_simple.py  deploy_to_streamlit.py  packages.txt  pyproject.toml  requirements.txt  requirements_minimal.txt  run_api.py  runtime.txt  setup.py  setup_assets.py  sign_language_model_best.pth  streamlit_app.py  streamlit_app_demo.py  streamlit_app_fallback.py  streamlit_app_robust.py  test_bilingual_integration.py  test_sign_to_text_integration.py  vercel_assets_manager.py  vercel_deployment_guide.md  wlasl_vit_transformer.pth
.streamlit/: config.toml
sign_language_translator/: api.py  cli.py  ui.py
sign_language_translator/assets_WLASL/Colab_coding/: Pretrain_SignToText_for_cursor.ipynb
sign_language_translator/assets_WLASL/mappings/: common_WLASL.txt  filtered_wlasl.json  missing_wlasl_videos_with_numberings.txt  psl_to_wlasl_mapping.json  unmatched_psl_glosses.json
sign_language_translator/assets_WLASL/model/: wlasl_sign_cnn_lstm_190frames.pth  wlasl_sign_cnn_lstm_30frames.pth  wlasl_sign_cnn_lstm_60frames.pth
sign_language_translator/config/: assets.py  enums.py
sign_language_translator/languages/: utils.py
sign_language_translator/models/: __init__.py  _utils.py  psl_to_text.py  sign_to_sign.py
sign_language_translator/models/sign_to_text/: __init__.py  integration_example.py  psl_sign_to_text_model.py  sign_to_text_model.py  wlasl_sign_to_text_model.py
sign_language_translator/models/text_to_sign/: __init__.py  concatenative_synthesis.py  concatenative_synthesis_wlasl.py
sign_language_translator/utils/: augmentation.py
sign_language_translator/vision/landmarks/: display.py  landmarks.py
sign_language_translator/vision/video/: psl_processor.py  video.py
