[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sl-psl-rtp"
version = "1.0.0"
description = "Sign Language Translator - Pakistan Sign Language and American Sign Language Translation"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8,<3.13"
dependencies = [
    "streamlit>=1.28.0",
    "tqdm",
    "scipy",
    "scikit-learn",
    "torch",
    "torchvision",
    "opencv-python",
    "numpy",
    "requests",
    "click",
    "pillow",
    "matplotlib",
    "sign-language-translator==0.8.0",
    "mediapipe",
    "tensorflow",
    "transformers",
    "deep_translator==1.11.4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sign_language_translator*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.json", "*.yaml", "*.yml"]
