[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sl-psl-rtp"
version = "1.0.0"
description = "Sign Language Translator - Pakistan Sign Language and American Sign Language Translation"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "streamlit>=1.28.0",
    "tqdm",
    "scipy",
    "scikit-learn",
    "torch",
    "torchvision",
    "opencv-python",
    "numpy",
    "requests",
    "click",
    "pillow",
    "matplotlib",
    # Local install handled via requirements.txt with '-e .'
    # "sign-language-translator==0.7.2",  # Temporarily disabled due to Python 3.13 compatibility
    "mediapipe",
    "tensorflow",
    "transformers",
    "deep_translator==1.11.4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sign_language_translator*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.json", "*.yaml", "*.yml"]
